api_py_write_简版
api_py_write_简版

--- a/API_py_scripts_demo2_writeExcel/report/2018-09-10 43-17_43_20_result.html
+++ b/API_py_scripts_demo2_writeExcel/report/2018-09-10 43-17_43_20_result.html
@@ -249,9 +249,9 @@ function close_shots(obj) {
 </div>
 <div class='heading'>
 <h1>测试报告</h1>
-<p class='attribute'><strong>开始时间:</strong> 2018-09-07 18:54:20</p>
-<p class='attribute'><strong>耗时:</strong> 0:00:00.122974</p>
-<p class='attribute'><strong>状态:</strong> 错误 1</p>
+<p class='attribute'><strong>开始时间:</strong> 2018-09-10 17:43:20</p>
+<p class='attribute'><strong>耗时:</strong> 0:00:00.529322</p>
+<p class='attribute'><strong>状态:</strong> 通过 1</p>
 
 <p class='description'>用例执行情况</p>
 </div>
@@ -284,32 +284,32 @@ function close_shots(obj) {
     <td>错误截图</td>
 </tr>
 
-<tr class='errorClass'>
+<tr class='passClass'>
     <td>testAPI</td>
     <td>1</td>
-    <td>0</td>
-    <td>0</td>
     <td>1</td>
+    <td>0</td>
+    <td>0</td>
     <td><a href="javascript:showClassDetail('c1',1)">详情</a></td>
     <td> </td>
 </tr>
 
-<tr id='ft1.1'>
-    <td class='errorCase'><div class='testcase'>test_bdh_api_writedata</div></td>
+<tr id='pt1.1'>
+    <td class='none'><div class='testcase'>test_bdh_api</div></td>
     <td colspan='5' align='center'>
 
     <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft1.1')" >
-        错误</a>
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt1.1')" >
+        通过</a>
 
-    <div id='div_ft1.1' class="popup_window">
+    <div id='div_pt1.1' class="popup_window">
         <div style='text-align: right; color:red;cursor:pointer'>
-        <a onfocus='this.blur();' onclick="document.getElementById('div_ft1.1').style.display = 'none' " >
+        <a onfocus='this.blur();' onclick="document.getElementById('div_pt1.1').style.display = 'none' " >
            [x]</a>
         </div>
         <pre>
         
-ft1.1: 接口总数 2
+pt1.1: 接口总数 2
 --正在进行接口测试，开始第1个请求---------------
 -------请求参数-----------------
 get
@@ -317,18 +317,23 @@ http://dev01.bdhlan.com:8080/bdhsystem/farmplantend/farmlands/count
 header: {'content-type': '', 'BDHAuthorization': 'B94ftK1WY6JSUe7hBTfmgOsGckPFbW8dRASuVNQ52ag5f9pS//4V5E66NZNgQq9tnw2GwdcnZgG7Nz6SEv/klZB+VHjS3DzMCKDb92L'}
 data 
 -------返回参数-----------------
-code &lt;Response [200]&gt;
-response {'errmsg': None, 'errno': 0, 'data': 107}
+code 200
+response {'data': 107, 'errmsg': None, 'errno': 0}
 第1个接口，根据id获取地块:测试成功。
-json数据为:{'errmsg': None, 'errno': 0, 'data': 107}
+json数据为:{'data': 107, 'errmsg': None, 'errno': 0}
+--正在进行接口测试，开始第2个请求---------------
+-------请求参数-----------------
+get
+http://dev01.bdhlan.com:8080/bdhsystem/farmplantend/plantUserWallet
+header: {'content-type': '', 'BDHAuthorization': 'B94ftK1WY6JSUe7hBTfmgOsGckPFbW8dRASuVNQ52ag5f9pS//4V5E66NZNgQq9tnw2GwdcnZgG7Nz6SEv/klZB+VHjS3DzMCKDb92L'}
+data 
+-------返回参数-----------------
+code 200
+response {'data': {'uid': '22', 'amount': 800.0}, 'errmsg': None, 'errno': 0}
+第2个接口，bdh获取钱包余额:测试成功。
+json数据为:{'data': {'uid': '22', 'amount': 800.0}, 'errmsg': None, 'errno': 0}
 -------正在写入数据，请等待-----------------
 write finished
-Traceback (most recent call last):
-  File "E:\mysoft\myworksapce\project\API_py_scripts_demo2\test_bdh_api_write.py", line 84, in test_bdh_api_writedata
-    self.write_datas_api(reals,key_names)
-  File "E:\mysoft\myworksapce\project\API_py_scripts_demo2\test_bdh_api_write.py", line 90, in write_datas_api
-    return suc_num,reals,key_names
-NameError: name 'suc_num' is not defined
 
 
         </pre>
@@ -342,15 +347,15 @@ NameError: name 'suc_num' is not defined
 <tr id='total_row'>
     <td>统计</td>
     <td>1</td>
-    <td>0</td>
-    <td>0</td>
     <td>1</td>
+    <td>0</td>
+    <td>0</td>
     <td> </td>
     <td> </td>
 </tr>
 </table>
 <script>
-    drawCircle(0, 0, 1)
+    drawCircle(1, 0, 0)
 </script>
 
 <div id='ending'> </div>
